# Multi-agent-Stock-Analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  us_sector_valuation.json
Users/zap/Documents/Multi-agent stock analyzer/output/TSLA_2026-04-10/: final_decision.json  fundamental_analysis.md  technical_analysis.md  us_market_analysis.md
src/stock_advisor/: crew.py  llm_config.py  main.py  models.py  pipeline.py
src/stock_advisor/tools/: __init__.py  chart_tools.py  data_tools.py  report_tools.py
tests/: serper_dev_tool.py  test_agent_diagnostics.py  test_fundamental_agent.py  test_website_search_tool.py
