[project]
name = "stock_advisor"
version = "0.1.0"
description = "stock_advisor using crewAI"
authors = [{ name = "FinBud", email = "finbud.app@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=1.14.0",
    "firecrawl-py>=2.7.1",
    "google-generativeai>=0.8.5",
    "markdown>=3.8",
    "matplotlib>=3.10.3",
    "pypdf>=5.4.0",
    "weasyprint>=65.1",
    "yfinance",
]

[project.scripts]
stock_advisor = "stock_advisor.main:run"
run_crew = "stock_advisor.main:run"
train = "stock_advisor.main:train"
replay = "stock_advisor.main:replay"
test = "stock_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
